--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "iostream": "cpp",
     "ostream": "cpp",
     "cmath": "cpp",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "string": "cpp"
   }
 }
